--- a/style.css
+++ b/style.css
@@ -150,6 +150,9 @@ color: #fff;
 }
 
 .aboutme-p{   
+    
+    display:flex;
+    flex-wrap: wrap;
     font-size:large;
 }
 
@@ -197,6 +200,8 @@ color: #fff;
 
 #openpromptimg{
     
+    display: flex;
+    flex-wrap: wrap;
     width:40vh;
     height:auto; 
     margin: 5vh;
@@ -204,13 +209,16 @@ color: #fff;
 
 #generatedimg{
     
+    display: flex;
+    flex-wrap: wrap;
     width:40vh;
     height:auto; 
     margin: 5vh;
 }
 
-#calendarimg1{
+/* #calendarimg1{
     
+
     width:40vh;
     height:auto; 
     margin: 5vh;
@@ -221,11 +229,27 @@ color: #fff;
     width:40vh;
     height:auto; 
     margin: 5vh;
-}
+} */
 
 @media screen and (max-width: 992px) {
     .header {
       background: #772014;
+    }
+
+    .mainitems{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center
+    }
+
+    .footer{
+        display: flex;
+        flex-wrap: wrap;
+        padding: 20px;
+        text-align: center;
+        background: #13293d;
+        color: #fff;
     }
   }
 
@@ -237,6 +261,22 @@ color: #fff;
         position:relative;
         left: 5vh;
     }
+
+    .mainitems{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center
+    }
+
+    .footer{
+        display: flex;
+        flex-wrap: wrap;
+        padding: 20px;
+        text-align: center;
+        background: #13293d;
+        color: #fff;
+    }
   }
 
   @media screen and (max-width: 320px) {
@@ -246,5 +286,21 @@ color: #fff;
         width:320px;
         position:relative;
         left: 5vh;
+    }
+
+    .mainitems{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center
+    }
+
+    .footer{
+        display: flex;
+        flex-wrap: wrap;
+        padding: 20px;
+        text-align: center;
+        background: #13293d;
+        color: #fff;
     }
   }
