--- a/style.css
+++ b/style.css
@@ -5,13 +5,22 @@ body {
 .header {
 background-color: red;
 color: #fff;
+box-shadow: 0 -6px 10px 5px rgba(0,0,0,0.5);
+
 }
+
+/* .header {
+    background-color: red;
+    color: #fff;
+    } */
 
 .footer{
     padding: 20px;
     text-align: center;
     background: #13293d;
     color: #fff;
+    position: sticky;
+  top: 100vh;
 }
 
 .footer > a{
@@ -90,7 +99,7 @@ color: #fff;
     height:26vh; 
 }
 
-.box-1{
+.col{
     width: 50vh;
     height: 25vh; 
     display:flex;
@@ -98,12 +107,18 @@ color: #fff;
     margin:5vh; 
 }
 
-.box-1 > img{
+.col > img{
     display:flex;
     flex-wrap: wrap;   
 }
 
-.box-2{
+.box-title {
+    width: 50vh;
+    /* height: 3vh; */
+    font-size: large;
+    font-weight: bold;
+}
+/* .box-2{
     width: 50vh;
     height: 25vh; 
     display:flex;
@@ -140,13 +155,14 @@ color: #fff;
 .box-4 > img{
     display:flex;
     flex-wrap: wrap;
-}
+} */
 
 #aboutme{
     
     font-size:xx-large;
     font-weight:bolder;
     text-align: center;
+    position:relative;
 }
 
 .aboutme-p{   
@@ -154,6 +170,7 @@ color: #fff;
     display:flex;
     flex-wrap: wrap;
     font-size:large;
+    
 }
 
 #aboutmeimg{
@@ -166,7 +183,8 @@ color: #fff;
 .mainitems{
     display: flex;
     align-items: center;
-    justify-content: center
+    justify-content: center;
+    position:relative;
 
 }
 
@@ -229,6 +247,75 @@ color: #fff;
     width:40vh;
     height:auto; 
     margin: 5vh;
+} */
+
+.background-image {
+    background-image:url(./Images/wood2.jpg);
+    background-size: cover;
+    background-attachment:fixed;  
+}
+
+.background-image2 {
+    position: relative;
+    background-size: cover;
+    height: 100%;
+}
+
+    .background-image2::before {
+        content: '';
+        position: absolute;
+        top: 0px;
+        right: 0px;
+        bottom: 0px;
+        left: 0px;
+        background-image:url(./Images/carpet1.jpg);
+        background-size: cover;
+        background-attachment:fixed;
+        opacity: 0.5;
+        height: 100%;
+   
+    }
+
+.header-image{
+    position: relative;
+    
+}
+
+.header-image::before{
+    position: relative;
+    content: '';
+        position: absolute;
+        top: 0px;
+        right: 0px;
+        bottom: 0px;
+        left: 0px;
+        background-image:url(./Images/granite.jpg);
+        background-size: cover;
+        background-attachment:fixed;
+        opacity: 0.7;
+        height: 100%;
+        
+}
+
+/* .header-image2{
+    position: relative;
+    
+}
+
+.header-image2::before{
+    position: relative;
+    content: '';
+        position: absolute;
+        top: 0px;
+        right: 0px;
+        bottom: 0px;
+        left: 0px;
+        background-image:url(./Images/wood.jpg);
+        background-size: cover;
+        background-attachment:fixed;
+        opacity: 0.6;
+        height: 100%;
+        
 } */
 
 @media screen and (max-width: 992px) {
