--- a/style.css
+++ b/style.css
@@ -281,6 +281,27 @@ box-shadow: 0 -6px 10px 5px rgba(0,0,0,0.5);
    
     }
 
+    .background-image3 {
+        position: relative;
+        background-size: cover;
+        height: 100%;
+    }
+    
+        .background-image3::before {
+            content: '';
+            position: absolute;
+            top: 0px;
+            right: 0px;
+            bottom: 0px;
+            left: 0px;
+            background-image:url(./Images/wall.jpg);
+            background-size: cover;
+            background-attachment:fixed;
+            opacity: 0.7;
+            height: 100%;
+       
+        }
+
 .header-image{
     position: relative;
     
